--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
+<div>test</div>
+
     <script type="module" src="/src/scripts/main.js"></script>
 </body>
 </html>
