--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,18 @@
     <link rel="stylesheet" href="/src/styles/styles.css">
     <title>Document</title>
 </head>
-<body>
-<div>test</div>
 
-    <script type="module" src="/src/scripts/main.js"></script>
+<body>
+    <h1>My Movie List</h1>
+    <h2>Uh-Huh</h2>
+    <article id="movie-container">
+
+    </article>
+
+    <script src="/src/scripts/movieManager.js"></script>
+    <script src="/src/scripts/apiManager.js"></script>
+     <!-- vvv comes last vvv  -->
+    <script src="/src/scripts/main.js"></script>
 </body>
+
 </html>
